Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97571

Text in column header is not elided for QHeaderView

XMLWordPrintable

    • Linux/X11
    • 7763b83c4 (dev), 67e5333cf (tqtc/lts-6.2), 0ea8f4639 (6.5)

      The text in a column header is not elided for QHeaderView with Qt 6.2.0, same behavior with the dev branch. Works in Qt 5.15.2. Example code attached.

       

        1. filemodel.cpp
          1 kB
        2. filemodel.h
          1.0 kB
        3. fileview.cpp
          0.3 kB
        4. fileview.h
          0.1 kB
        5. headerview_elided.tar.bz2
          3 kB
        6. main.cpp
          1 kB
        7. headerviewbug.pro
          0.1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            jonaski Jonas Kvinge
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes